# neuralsemantic

./: .gitignore  LICENSE  LICENSE-FULL.md  NOTICE  README.md  lerna.json  package-lock.json  package.json
examples/: basic_usage.py  basic_usage.ts  complete_demo.py  config.json
integrations/mcploop/: package.json  tsconfig.json
integrations/mcploop/src/: index.ts  integration.ts  mcp-server.ts  types.ts
python/: pyproject.toml  requirements.txt
python/data/: patterns.db
python/neuralsemantic/: __init__.py
python/neuralsemantic/cli/: __init__.py  main.py
python/neuralsemantic/compression/: __init__.py  compressor.py  context_analyzer.py  fallback_handler.py  quality_scorer.py
python/neuralsemantic/core/: __init__.py  compiler.py  config.py  exceptions.py  types.py
python/neuralsemantic/data/: schema.sql
python/neuralsemantic/engines/: __init__.py  base_engine.py  engine_factory.py  extreme_engine.py  hybrid_engine.py  semantic_engine.py
python/neuralsemantic/patterns/: __init__.py  conflict_resolver.py  pattern_manager.py  pattern_matcher.py
python/neuralsemantic/utils/: __init__.py  metrics_collector.py  text_processing.py  token_counter.py
python/neuralsemantic/vector/: __init__.py  embeddings.py  similarity_search.py  vector_store.py
python/tests/: MOCK_TESTING_GUIDE.md  conftest.py  gradual_implementation_guide.py  practical_mock_implementations.py  test_compiler.py  test_compiler_basic.py  test_mock_examples_python.py  test_mock_examples_typescript.ts  test_simple.py
